# fused-logger-aeson

./: .gitignore  CHANGELOG.md  README.md  bb.edn  fused-katip.cabal  fused-logger-aeson.cabal
app/: Main.hs
src/: XxxLib.hs
src/Control/Carrier/: JLog.hs  Katip.hs  LoggerAeson.hs
src/Control/Carrier/LoggerAeson/: Class.hs  Color.hs  RIO.hs  Reader.hs
src/Control/Effect/: JLog.hs  Katip.hs  LoggerAeson.hs
src/Katip/: Fused.hs
test/: Example.hs  LoggerAesonRIOSpec.hs  LoggerAesonReaderSpec.hs  LoggerAesonSpec.hs  Xxx.hs  XxxLibSpec.hs
test/Control/Carrier/: LoggerAesonSpec.hs
test/Control/Carrier/LoggerAeson/: ClassSpec.hs
test/Control/Effect/: LoggerAesonSpec.hs
