cabal-version:      3.6
name:               fused-logger-aeson
version:            0.1.0.0
synopsis:           Using monad-logger-aeson with fused-effects
-- A longer description of the package.
-- description:
homepage:           https://github.coom/grmble/fused-logger-aeson
-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Juergen Gmeiner
maintainer:         spamless.juergen@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


common deps
    build-depends:
        -- 4.16.4 is ghc 9.2.x
        , base ^>=4.16.4.0
        , aeson
        , ansi-terminal
        , bytestring
        , dlist
        , fused-effects
        , unordered-containers
        , stm
        , text
        , time
    default-language: GHC2021

common test-deps
    import: deps
    build-depends:    
        , doctest
        , hspec
        , hspec-discover
        , QuickCheck
        , quickcheck-text

common opts
    ghc-options:
        -O      
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints

common exec-opts
    import: opts
    ghc-options:      
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -with-rtsopts=-T

        
library
    import:           deps, opts
    exposed-modules:  
        Control.Effect.LoggerAeson
        Control.Carrier.LoggerAeson
        Control.Carrier.LoggerAeson.Class
        Control.Carrier.LoggerAeson.Color
    -- Modules included in this library but not exported.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   src

test-suite fused-logger-aeson-test
    import:           deps, test-deps, opts, exec-opts
    other-modules:    
        Example
        Control.Carrier.LoggerAesonSpec
        Control.Carrier.LoggerAeson.ClassSpec
        Control.Effect.LoggerAesonSpec
    build-depends:    fused-logger-aeson
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    
